--- a/style.css
+++ b/style.css
@@ -156,14 +156,28 @@ svg {
     font-size: var(--fs-button);
 }
 
+/* Attribution */
+.attribution {
+    font-size: 11px;
+    text-align: center;
+    margin-bottom: 1rem;
+    color: var(--clr-neutral-300)
+  }
+  .attribution a {
+    color: var(--clr-accent-400);
+    font-weight: var(--fw-body-bold);
+  }
+
 /* Body */
 body {
     background-color: var(--clr-primary-900);
     display: flex;
+    flex-direction: column;
     min-height: 100vh;
     width: 100vw;
     justify-content: center;
     align-items: center;
+    font-family: var(--ff-body);
 }
 
 /* Card */
